packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-nightly/responder.stderr
error: need at least one field
 --> tests/ui-fail-nightly/responder.rs:4:1
  |
4 | struct Thing1;
  | ^^^^^^^^^^^^^^
  |
note: error occurred while deriving `Responder`
 --> tests/ui-fail-nightly/responder.rs:3:10
  |
3 | #[derive(Responder)]
  |          ^^^^^^^^^
  = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: need at least one field
 --> tests/ui-fail-nightly/responder.rs:7:14
  |
7 | struct Thing2();
  |              ^^
  |
note: error occurred while deriving `Responder`
 --> tests/ui-fail-nightly/responder.rs:6:10
  |
6 | #[derive(Responder)]
  |          ^^^^^^^^^
  = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: need at least one field
  --> tests/ui-fail-nightly/responder.rs:13:12
   |
13 | enum Foo { Bark, }
   |            ^^^^
   |
note: error occurred while deriving `Responder`
  --> tests/ui-fail-nightly/responder.rs:12:10
   |
12 | #[derive(Responder)]
   |          ^^^^^^^^^
   = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only one lifetime is supported
  --> tests/ui-fail-nightly/responder.rs:16:14
   |
16 | struct Thing4<'a, 'b>(&'a str, &'b str);
   |              ^^^^^^^^
   |
note: error occurred while deriving `Responder`
  --> tests/ui-fail-nightly/responder.rs:15:10
   |
15 | #[derive(Responder)]
   |          ^^^^^^^^^
   = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid or unknown content type
  --> tests/ui-fail-nightly/responder.rs:25:27
   |
25 | #[response(content_type = "")]
   |                           ^^
   |
note: error occurred while deriving `Responder`
  --> tests/ui-fail-nightly/responder.rs:24:10
   |
24 | #[derive(Responder)]
   |          ^^^^^^^^^
   = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid or unknown content type
  --> tests/ui-fail-nightly/responder.rs:29:27
   |
29 | #[response(content_type = "idk")]
   |                           ^^^^^
   |
note: error occurred while deriving `Responder`
  --> tests/ui-fail-nightly/responder.rs:28:10
   |
28 | #[derive(Responder)]
   |          ^^^^^^^^^
   = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> tests/ui-fail-nightly/responder.rs:33:27
   |
33 | #[response(content_type = 100)]
   |                           ^^^
   |
note: error occurred while deriving `Responder`
  --> tests/ui-fail-nightly/responder.rs:32:10
   |
32 | #[derive(Responder)]
   |          ^^^^^^^^^
   = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: status must be in range [100, 599]
  --> tests/ui-fail-nightly/responder.rs:37:21
   |
37 | #[response(status = 8)]
   |                     ^
   |
note: error occurred while deriving `Responder`
  --> tests/ui-fail-nightly/responder.rs:36:10
   |
36 | #[derive(Responder)]
   |          ^^^^^^^^^
   = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected unsigned integer literal
  --> tests/ui-fail-nightly/responder.rs:41:21
   |
41 | #[response(status = "404")]
   |                     ^^^^^
   |
note: error occurred while deriving `Responder`
  --> tests/ui-fail-nightly/responder.rs:40:10
   |
40 | #[derive(Responder)]
   |          ^^^^^^^^^
   = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected unsigned integer literal
  --> tests/ui-fail-nightly/responder.rs:45:21
   |
45 | #[response(status = "404", content_type = "html")]
   |                     ^^^^^
   |
note: error occurred while deriving `Responder`
  --> tests/ui-fail-nightly/responder.rs:44:10
   |
44 | #[derive(Responder)]
   |          ^^^^^^^^^
   = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> tests/ui-fail-nightly/responder.rs:49:41
   |
49 | #[response(status = 404, content_type = 120)]
   |                                         ^^^
   |
note: error occurred while deriving `Responder`
  --> tests/ui-fail-nightly/responder.rs:48:10
   |
48 | #[derive(Responder)]
   |          ^^^^^^^^^
   = note: this error originates in the derive macro `Responder` (in Nightly builds, run with -Z macro-backtrace for more info)
